[gd_scene load_steps=3 format=3 uid="uid://r17hoxo08r2f"]

[ext_resource type="Script" uid="uid://cq1klvcdwsaha" path="res://Games/RocketLander/scenes/main_menu.gd" id="1_ccoqw"]
[ext_resource type="Texture2D" uid="uid://ct0c60k3q1y7x" path="res://Games/RocketLander/assets/images/main_menu.jpg" id="2_6c483"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccoqw")
game_scene_path = "uid://bt3a4ijl0ll2b"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6c483")
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="LoadingContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="LoadingLabel" type="Label" parent="MarginContainer/VBoxContainer/LoadingContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Loading..."
horizontal_alignment = 1

[node name="LoadingProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/LoadingContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 4
